--- a/src/main/resources/com/example/omnilog/IPGetInfo.fxml
+++ b/src/main/resources/com/example/omnilog/IPGetInfo.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="611.0" fitWidth="296.0" layoutX="17.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../mg.png" />
+            <Image url="@../../../images/mg.png" />
          </image>
       </ImageView>
       <TextField fx:id="inputdata" layoutX="13.0" layoutY="311.0" opacity="0.72" prefHeight="48.0" prefWidth="290.0" promptText="Enter IP address (e.g., 192.168.100.1)" styleClass="rounded-transparent-textfield" stylesheets="@../../../stye.css">
