--- a/src/main/resources/com/example/omnilog/menu.fxml
+++ b/src/main/resources/com/example/omnilog/menu.fxml
@@ -39,7 +39,7 @@
       </Button>
       <ImageView fitHeight="190.0" fitWidth="255.0" layoutX="47.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../12.png" />
+            <Image url="@../../../images/12.png" />
          </image>
       </ImageView>
       <Text fill="#b88999" layoutX="18.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select an option amongst the following: ">
@@ -49,7 +49,7 @@
       </Text>
       <ImageView fitHeight="74.0" fitWidth="222.0" layoutX="82.0" layoutY="552.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../oo.png" />
+            <Image url="@../../../images/oo.png" />
          </image>
       </ImageView>
    </children>
